--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "express": "^4.17.1",
     "node-env-run": "^4.0.2",
     "nodemon": "^2.0.7",
-    "npm-run-all": "^4.1.5",
-    "typescript": "4.1.3"
+    "npm-run-all": "^4.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
